# john-bampton.github.io

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  feed.xml  fetch.py  fetch_users.py  github_faces.py  index.html  pyproject.toml  render.py  script.js
.github/: dependabot.yml  labeler.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  fetch-daily.yml  pre-commit.yml  render-on-push.yml  super-linter.yml  update-faces.yml
cache/: users.json
docs/: feed.xml  index.html  manifest.json  script.js  service-worker.js  styles.css  users.json
layouts/: card.html  footer.html  header.html  layout.html
