[project]
name = "github-faces"
version = "0.1.0"
dependencies = ["requests>=2.31.0", "Jinja2>=3.0.0"]

[tool.poetry.dev-dependencies]
flake8 = "*"
pylint = "*"
yamllint = "*"
isort = "*"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/
'''

[tool.isort]
profile = "black"
line_length = 88
